# sned-server

./: .env  .gitignore  Cargo.toml  README.md
migrations/2021-01-01-212201_create_users/: up.sql
migrations/2021-01-03-071853_create_file_metadata_items/: down.sql  up.sql
migrations/2021-01-03-071953_create_transfer_records/: down.sql  up.sql
migrations/2021-03-15-034326_create_authenticators/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
