[package]
name = "sned-server"
version = "0.1.0"
authors = ["hmir"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3", features = ["openssl"] }
bigdecimal = "0.1.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "numeric", "postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
openssl = { version = "0.10", features = ["v110"] }
rand = "0.8"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
uuid = { version = "0.8", features = ["v4"] }
